@startuml
'https://plantuml.com/class-diagram

abstract class KeHoachHocTap {
    # String ten
    + {abstract} void add(KeHoachHocTap k)
    + {abstract} void remove(KeHoachHocTap k)
    + {abstract} int getSoTC()
    + {abstract} int getHP()
    + {abstract} String thongTin()
}
class MonHoc {
    # int soTC, hp
    + add(KeHoachHocTap k): void
    + remove(KeHoachHocTap k): void
}
class KeHoachChung {
    + List<KeHoachHocTap> lst
    + add(KeHoachHocTap k): void
    + remove(KeHoachHocTap k): void
}


KeHoachHocTap <|-- MonHoc
KeHoachHocTap <|-- KeHoachChung
KeHoachHocTap <--* KeHoachChung: lst

note bottom of MonHoc
getSoTC:
    return SoTC
getHP:
    return soTC * hp
thongTin:
    ví dụ: Toán A1, số tín chỉ: 3, học phí: 900
end note

@enduml